public/src/css/stylesheet.css
/* ... */
h2{
    margin: 0;
    margin-bottom: 2%;
}
.input-group{
    width: 100%;
}
.input-group input{
    width: 80%;
}

/* 1.1 Overlay State loading Spinner */

#overlay {
    position: fixed;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.5);
    z-index: 99999999999999999;
}
.spinner {
   position: absolute;
   left: 45%;
   top: 45%;
   height:80px;
   width:80px;
   margin:0px auto;
   -webkit-animation: rotation .6s infinite linear;
   -moz-animation: rotation .6s infinite linear;
   -o-animation: rotation .6s infinite linear;
   animation: rotation .6s infinite linear;
   border-left:6px solid rgba(0,174,239,.15);
   border-right:6px solid rgba(0,174,239,.15);
   border-bottom:6px solid rgba(0,174,239,.15);
   border-top:6px solid rgba(0,174,239,.8);
   border-radius:100%;
}

@-webkit-keyframes rotation {
   from {-webkit-transform: rotate(0deg);}
   to {-webkit-transform: rotate(359deg);}
}
@-moz-keyframes rotation {
   from {-moz-transform: rotate(0deg);}
   to {-moz-transform: rotate(359deg);}
}
@-o-keyframes rotation {
   from {-o-transform: rotate(0deg);}
   to {-o-transform: rotate(359deg);}
}
@keyframes rotation {
   from {transform: rotate(0deg);}
   to {transform: rotate(359deg);}
}

/* 1.2 Filter loading spinner */

#spinner.active {
    display: block;
}
#spinner {
    display: none;
    position: absolute;
    height: 60px;
    width: 60px;
    top: 40%;
    left: 48%;
    z-index: 1;

}
.ball {
    position: absolute;
    display: block;
    background-color: #4eaacf;
    left: 0px;
    width: 13px;
    height: 13px;
    border-radius: 6px;
}
#first {
    -webkit-animation-timing-function: cubic-bezier(0.5, 0.3, 0.9, 0.9);
    -webkit-animation-name: rotate; 
    -webkit-animation-duration: 2s; 
    -webkit-animation-iteration-count: infinite;
    -webkit-transform-origin: 6px 30px;
    -moz-animation-timing-function: cubic-bezier(0.5, 0.3, 0.9, 0.9);
    -moz-animation-name: rotate; 
    -moz-animation-duration: 2s; 
    -moz-animation-iteration-count: infinite;
    -moz-transform-origin: 6px 30px;

}
#second {
    -webkit-animation-timing-function: cubic-bezier(0.5, 0.5, 0.9, 0.9);
    -webkit-animation-name: rotate; 
    -webkit-animation-duration: 2s; 
    -webkit-animation-iteration-count: infinite;
    -webkit-transform-origin: 6px 30px;
      -moz-animation-timing-function: cubic-bezier(0.5, 0.5, 0.9, 0.9);
    -moz-animation-name: rotate; 
    -moz-animation-duration: 2s; 
    -moz-animation-iteration-count: infinite;
    -moz-transform-origin: 6px 30px;
}
#third {
    -webkit-animation-timing-function: cubic-bezier(0.5, 0.7, 0.9, 0.9);
    -webkit-animation-name: rotate; 
    -webkit-animation-duration: 2s; 
    -webkit-animation-iteration-count: infinite;
    -webkit-transform-origin: 6px 30px;
      -moz-animation-timing-function: cubic-bezier(0.5, 0.7, 0.9, 0.9);
    -moz-animation-name: rotate; 
    -moz-animation-duration: 2s; 
    -moz-animation-iteration-count: infinite;
    -moz-transform-origin: 6px 30px;
}
#fourth {
    -webkit-animation-timing-function: cubic-bezier(0.5, 0.7, 0.9, 0.9);
    -webkit-animation-name: rotate; 
    -webkit-animation-duration: 2s; 
    -webkit-animation-iteration-count: infinite;
    -webkit-transform-origin: 6px 30px;
      -moz-animation-timing-function: cubic-bezier(0.5, 0.7, 0.9, 0.9);
    -moz-animation-name: rotate; 
    -moz-animation-duration: 2s; 
    -moz-animation-iteration-count: infinite;
    -moz-transform-origin: 6px 30px;
}
@-webkit-keyframes rotate {
  0% {
    -webkit-transform: rotate(0deg) scale(1);
  }
  100% { 
    -webkit-transform: rotate(1440deg) scale(1); 
  }
}​

@-moz-keyframes rotate {
  0% {
    -moz-transform: rotate(0deg) scale(1);
  }
  100% { 
    -moz-transform: rotate(1440deg) scale(1); 
  }
}



/* ************************************************* */
/*                2.0 Navigaition Section            */
/* ************************************************* */
.navbar{
    border: 0;
    border-radius: 0;
    background: #4eaacf;
}
.navbar-default .navbar-brand{
    color: #fff;
}
.navbar-default .navbar-brand:hover{
    color: #fff;
}
.navbar-default .navbar-brand:visited{
    color: #fff;
}

/* ************************************************* */
/*                3.0 Footer Section                 */
/* ************************************************* */
.footer {
    color: #fff;
    padding: 22px 40px;
    background-color: #333;
}

/* ************************************************* */
/*                4.0 Search Venue Section           */
/* ************************************************* */
.Main_Search #home-header {

  z-index: -1;
  height: 80%;

  background: url("../images/food.jpg") no-repeat ;
  background-size: 100% 100%;

}

.middle{
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -o-transform: translate(-50%, -50%);
    -opera-transform: translate(-50%, -50%);
    -moz-transform: translate(-50%, -50%);

    transform: translate(-50%, -50%);
    z-index: 999999;
    width: 85%;
    color: #FFFFFF;
}

.middle-title-1{
    font-size: 3.8em;  text-align: center;
    font-weight: bold;
}
.middle-title-2{
    font-weight: bold;
    font-size: 2.1em;  text-align: center;
}
.middle-title-3{
    margin-top: 30px;
    font-weight: bold;
    font-size: 1em; color: #D2E6FFl; text-align: center;
}
.middle-form {
    width: 35%;
    display: inline-block;
    margin: 0 auto;
}
.middle-form-section {
    text-align: center;
}
.middle-form-button{
    height: 34.1px;
}
#search{
    color: #fff;
    display: block;
    border: 0;
    background: #4eaacf; width: 100%; color: #fff;
    padding: 7px 14px;
    font-weight: bold;
}
#search:hover{
  opacity: 0.9;
}

#overons{
    padding-left: 5%;
    padding-right: 5%;
    min-height: 640px;
    padding: 53px;

}
.search_description {
    text-align: center;
    padding-top: 40px;
    letter-spacing: 0.1em;
}
/* ... */

